Fix Layout on Dashboard
Removed Drawer and replaced it with a flexbox-grid structure
this way we have no problems with an non expected overlay by the sidebar
Also moved the navigation bar to the top to have 100% width

There still an unexpected behavior on overflowing sidebar contents( #2 )

--- a/src/f_spacial/src/containers/sidebar/stylesheets/Sidebar.css
+++ b/src/f_spacial/src/containers/sidebar/stylesheets/Sidebar.css
@@ -1,8 +1,24 @@
+.SidebarContainer {
+  display: flex;
+  flex: 3 1 0;
+  min-height: 0;
+}
+
 .Drawer_Container {
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
   height: 100%;
-  width: 300px;
+}
+
+.Drawer_Search {
+  display: flex;
+  flex: 0 1 auto;
+}
+
+.Drawer_Results{
+  display: flex;
+  flex: 1 1 auto;
 }
 
 .Drawer_Paper {
